# flubber

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md  flubber.cabal  flubber.example.toml  flubber.toml
.github/workflows/: rust.yml
app/: Main.hs
components/flubber-backend/: Cargo.toml
components/flubber-backend-proto/: Cargo.toml
components/flubber-backend-proto/src/: lib.rs
components/flubber-backend/src/: lib.rs
components/flubber-plugin/: Cargo.toml
components/flubber-plugin-proto/: Cargo.toml
components/flubber-plugin-proto/src/: lib.rs  serde.rs
components/flubber-plugin-signal/: Cargo.toml
components/flubber-plugin-signal/src/: main.rs
components/flubber-plugin/src/: async.rs  lib.rs  sync.rs
components/flubber-server/: Cargo.toml
components/flubber-server-backend/: Cargo.toml
components/flubber-server-backend/examples/: hello_basicbackend.rs
components/flubber-server-backend/src/: basic_backend.rs  json_subprocess.rs  lib.rs
components/flubber-server-config/: Cargo.toml
components/flubber-server-config/src/: lib.rs
components/flubber-server-db/: Cargo.toml
components/flubber-server-db/examples/: list_all_rooms.rs
components/flubber-server-db/src/: lib.rs  macros.rs  queries.rs
components/flubber-server-plugin/: Cargo.toml
components/flubber-server-plugin/examples/: hello_basicplugin.rs
components/flubber-server-plugin/src/: basic_plugin.rs  json_subprocess.rs  lib.rs
components/flubber-server-web/: Cargo.toml
components/flubber-server-web/src/: lib.rs
components/flubber-server/src/: lib.rs  main.rs
components/flubber-utils/: Cargo.toml
components/flubber-utils/src/: lib.rs
plugins/trivial/: package-lock.json  package.json  trivial.js
src/: Main.hs
src/Network/Flubber/: Config.hs  Monad.hs  Plugins.hs  Utils.hs
src/Network/Flubber/Plugin/: Types.hs
src/Network/Flubber/Plugins/: Internal.hs  Types.hs  Worker.hs
src/Web/: Flubber.hs
