cabal-version: 2.2

name:         flubber
version:      0.1.0.0
homepage:     https://github.com/remexre/flubber
bug-reports:  https://github.com/remexre/flubber/issues
license:      MIT
license-file: LICENSE-MIT
author:       Nathan Ringo
maintainer:   nathan@remexre.xyz
category:     Network

library
  exposed-modules:
      Network.Flubber.Config
  build-depends:
      base       ^>= 4.12.0.0
    , containers ^>= 0.6.2.1
    , lens       ^>= 4.17.1
    , text       ^>= 1.2.4.0
    , tomland    ^>= 1.2.0.0
    , warp       ^>= 3.3.3
  extensions:
      DataKinds
    , OverloadedStrings
    , TypeOperators
  hs-source-dirs:      src
  default-language:    Haskell2010

executable flubber
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
      base                 ^>= 4.12.0.0
    , flubber               == 0.1.0.0
    , optparse-applicative ^>= 0.15.1.0
  hs-source-dirs:      src
  default-language:    Haskell2010
