cabal-version: 2.2

name:         flubber
version:      0.1.0.0
homepage:     https://github.com/remexre/flubber
bug-reports:  https://github.com/remexre/flubber/issues
license:      MIT
license-file: LICENSE-MIT
author:       Nathan Ringo
maintainer:   nathan@remexre.xyz
category:     Network

library
  exposed-modules:
      Network.Flubber.Config
    , Network.Flubber.Plugin.Types
  build-depends:
      aeson      ^>= 1.4.5.0
    , base       ^>= 4.12.0.0
    , containers ^>= 0.6.2.1
    , either     ^>= 5.0.1.1
    , htoml      ^>= 1.0.0.3
    , lens       ^>= 4.17.1
    , mtl        ^>= 2.2.2
    , text       ^>= 1.2.4.0
    , warp       ^>= 3.3.3
  extensions:
      DataKinds
    , DeriveGeneric
    , OverloadedStrings
    , TemplateHaskell
    , TypeOperators
  hs-source-dirs:   src
  default-language: Haskell2010

executable flubber
  main-is: Main.hs
  build-depends:
      base                 ^>= 4.12.0.0
    , flubber               == 0.1.0.0
    , lens                 ^>= 4.17.1
    , optparse-applicative ^>= 0.15.1.0
    , text                 ^>= 1.2.4.0
    , warp                 ^>= 3.3.3
  extensions:
      LambdaCase
    , TemplateHaskell
  hs-source-dirs:   app
  default-language: Haskell2010
