cabal-version: 2.2

name:         flubber
version:      0.1.0.0
homepage:     https://github.com/remexre/flubber
bug-reports:  https://github.com/remexre/flubber/issues
license:      MIT
license-file: LICENSE-MIT
author:       Nathan Ringo
maintainer:   nathan@remexre.xyz
category:     Network

library
  exposed-modules:
      Network.Flubber.Config
    , Network.Flubber.Monad
    , Network.Flubber.Plugins
    , Network.Flubber.Plugins.Internal
    , Network.Flubber.Plugins.Types
    , Network.Flubber.Plugins.Worker
    , Network.Flubber.Utils
  build-depends:
      aeson             ^>= 1.4.5.0
    , base              ^>= 4.12.0.0
    , base64-bytestring ^>= 1.0.0.2
    , bytestring        ^>= 0.10.8.2
    , conduit           ^>= 1.3.1.1
    , containers        ^>= 0.6.2.1
    , either            ^>= 5.0.1.1
    , exceptions        ^>= 0.10.3
    , extra             ^>= 1.6.18
    , htoml             ^>= 1.0.0.3
    , json-stream       ^>= 0.4.2.4
    , katip             ^>= 0.8.3.0
    , lens              ^>= 4.17.1
    , mtl               ^>= 2.2.2
    , text              ^>= 1.2.4.0
    , time              ^>= 1.9.3
    , typed-process     ^>= 0.2.6.0
    , utf8-string       ^>= 1.0.1.1
    , warp              ^>= 3.3.3
  default-extensions:
      DataKinds
    , DeriveGeneric
    , FlexibleContexts
    , FlexibleInstances
    , GADTs
    , GeneralizedNewtypeDeriving
    , LambdaCase
    , MultiParamTypeClasses
    , OverloadedStrings
    , TemplateHaskell
    , TupleSections
    , TypeFamilies
    , TypeOperators
  ghc-options: -Wall
  hs-source-dirs: src
  default-language: Haskell2010

executable flubber
  main-is: Main.hs
  build-depends:
      base                 ^>= 4.12.0.0
    , containers           ^>= 0.6.2.1
    , flubber               == 0.1.0.0
    , katip                ^>= 0.8.3.0
    , lens                 ^>= 4.17.1
    , optparse-applicative ^>= 0.15.1.0
    , text                 ^>= 1.2.4.0
    , warp                 ^>= 3.3.3
  default-extensions:
      LambdaCase
    , OverloadedStrings
    , TemplateHaskell
  ghc-options: -threaded -Wall
  hs-source-dirs: app
  default-language: Haskell2010
