[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
name = "flubber-plugin"
version = "0.1.0"

[dependencies]
flubber-plugin-proto = { path = "../flubber-plugin-proto" }

anyhow = "1.0.19"
serde = "1.0.102"
serde_json = "1.0.41"

tokio = "0.2.0-alpha.2"
