[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
name = "flubber-plugin"
version = "0.1.0-alpha"

[dependencies]
flubber-plugin-proto = { path = "../flubber-plugin-proto" }
flubber-utils = { path = "../flubber-utils" }

anyhow = "1.0.19"
serde = "1.0.102"
serde_json = "1.0.41"

futures-util-preview = "0.3.0-alpha.19"
pin-utils = "0.1.0-alpha.4"
tokio = "0.2.0-alpha.6"
tower = "0.3.0-alpha.2"
