[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
name = "flubber-server-backend"
version = "0.1.0-alpha"

[dependencies]
flubber-backend-proto = { path = "../flubber-backend-proto" }
flubber-utils = { path = "../flubber-utils" }

anyhow = "1.0.18"
bytes = "0.4.12"
derivative = "1.0.3"
derive_more = "0.15.0"
either = "1.5.3"
log = "0.4.8"
serde_json = "1.0.41"

tokio = { version = "0.2.0-alpha.6", features = ["process"] }
tower = "0.3.0-alpha.2"

[dev-dependencies]
femme = "1.3.0"
