[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
name = "flubber-server-db"
version = "0.1.0"

[dependencies]
flubber-plugin-proto = { path = "../flubber-plugin-proto" }
flubber-utils = { path = "../flubber-utils" }

anyhow = "1.0.18"
chrono = "0.4.9"
log = "0.4.8"
rusqlite = "0.20.0"
# serde_json = "1.0.41"

tokio = "0.2.0-alpha.6"

[dev-dependencies]
femme = "1.3.0"
