[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
name = "flubber-server-plugin"
version = "0.1.0"

[dependencies]
flubber-plugin-proto = { path = "../flubber-plugin-proto" }
flubber-utils = { path = "../flubber-utils" }

anyhow = "1.0.18"
bytes = "0.4.12"
derivative = "1.0.3"
derive_more = "0.15.0"
either = "1.5.3"
log = "0.4.8"
serde_json = "1.0.41"

pin-utils = "0.1.0-alpha.4"
tokio = "0.2.0-alpha.2"
tokio-process = "0.3.0-alpha.2"
tokio-timer = "0.3.0-alpha.2"

[dev-dependencies]
femme = "1.3.0"
