[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
name = "flubber-server"
version = "0.1.0-alpha"

[dependencies]
flubber-plugin-proto = { path = "../flubber-plugin-proto" }
flubber-server-db = { path = "../flubber-server-db" }
flubber-server-plugin = { path = "../flubber-server-plugin" }

# anyhow = "1.0.18"
# bytes = "0.4.12"
# derive_more = "0.15.0"
# either = "1.5.3"
# femme = "1.3.0"
# log = "0.4.8"
# paw = "1.0.0"
# rusqlite = "0.20.0"
# serde = "1.0.102"
# serde_derive = "1.0.102"
# serde_json = "1.0.41"
# structopt = "0.3.3"

# tokio = "0.2.0-alpha.6"
