[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
name = "flubber-server"
version = "0.1.0-alpha"

[dependencies]
flubber-plugin-proto = { path = "../flubber-plugin-proto" }
flubber-server-config = { path = "../flubber-server-config" }
flubber-server-db = { path = "../flubber-server-db" }
flubber-server-plugin = { path = "../flubber-server-plugin" }
flubber-server-web = { path = "../flubber-server-web" }

anyhow = "1.0.19"
dotenv = "0.15.0"
femme = "1.3.0"
log = "0.4.8"
paw = "1.0.0"
structopt = { version = "0.3.3", features = ["paw"] }

tokio = "0.2.0-alpha.6"
